// file: pkg/db/proto/messages/mysql_status.proto
edition = "2023";

package gcommon.v1.database;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

/**
 * MySQLStatus provides runtime metrics and server version information.
 */
message MySQLStatus {
  // Server version string
  string version = 1;

  // Server start time
  google.protobuf.Timestamp started_at = 2;

  // Number of open connections
  int32 open_connections = 3;

  // Replication role (e.g., master, replica)
  string role = 4;
}
